update api paths
